--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "mini-observable",
-  "version": "1.0.0",
+  "name": "es-observable",
+  "version": "0.0.1",
   "description": "min observable",
   "main": "./lib/observable.js",
   "scripts": {
-    "start": "rollup -c rollup.config.js"
+    "start": "rollup -c rollup.config.js",
+    "test": "node ./test/index"
   },
   "devDependencies": {
+    "es-observable-tests": "^0.3.0",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-node-resolve": "^3.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AngusFu/mini-observable.git"
+    "url": "git+https://github.com/AngusFu/es-observable.git"
   },
   "keywords": [
     "observable"
@@ -21,7 +23,7 @@
   "author": "ansgufuanswer126@qq.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AngusFu/mini-observable/issues"
+    "url": "https://github.com/AngusFu/es-observable/issues"
   },
-  "homepage": "https://github.com/AngusFu/mini-observable#readme"
+  "homepage": "https://github.com/AngusFu/es-observable#readme"
 }
