--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "es-observable-tests": "^0.3.0",
     "rollup": "^0.41.6",
     "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-watch": "^3.2.2"
   },
   "repository": {
     "type": "git",
